--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
     
     
 }
+
 nav{
     height: 12%;
     width: 100%;
@@ -24,6 +25,8 @@ nav{
     font-family: "Lato", sans-serif;
     font-weight: 800;
     font-style: normal;
+
+    background-color: black;
     
       
 }
