--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav{
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding-left: 50px;
+    /* padding-left: 50px; */
     padding-right:50px;
     margin-left: 35%;
     
